finish db report search function

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ web/web_sqlite3
 web/db.sqlite3
 web/media/*
 web/upload_app/__pycache__/*
+web/upload_app/ida/__pycache__/*
+web/upload_app/mongodb/__pycache__/*
+web/upload_app/es/__pycache__/*
 web/upload_app/migrations/*
 web/web/__pycache__/*
