--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ web/upload_app/mongodb/__pycache__/*
 web/upload_app/es/__pycache__/*
 web/upload_app/migrations/*
 web/web/__pycache__/*
-ida/*
+opseq_ida/*
