--- a/cuckoo/conf/cuckoo.conf
+++ b/cuckoo/conf/cuckoo.conf
@@ -36,7 +36,8 @@ reschedule = no
 # Enable processing of results within the main cuckoo process.
 # This is the default behavior but can be switched off for setups that
 # require high stability and process the results in a separate task.
-process_results = yes
+process_results = off
+
 
 # Limit the amount of analysis jobs a Cuckoo process goes through.
 # This can be used together with a watchdog to mitigate risk of memory leaks.
@@ -50,7 +51,7 @@ max_machines_count = 0
 # Limit the amount of VMs that are allowed to start in parallel. Generally
 # speaking starting the VMs is one of the more CPU intensive parts of the
 # actual analysis. This option tries to avoid maxing out the CPU completely.
-max_vmstartup_count = 1
+max_vmstartup_count = 8
 
 # Minimum amount of free space (in MB) available before starting a new task.
 # This tries to avoid failing an analysis because the reports can't be written
@@ -96,13 +97,13 @@ force_port = no
 
 # Maximum size of uploaded files from VM (screenshots, dropped files, log).
 # The value is expressed in bytes, by default 128 MB.
-upload_max_size = 134217728
+upload_max_size = 5000000000
 
 [processing]
 # Set the maximum size of analyses generated files to process. This is used
 # to avoid the processing of big files which may take a lot of processing
 # time. The value is expressed in bytes, by default 128 MB.
-analysis_size_limit = 134217728
+analysis_size_limit = 5000000000
 
 # Enable or disable DNS lookups.
 resolve_dns = yes
@@ -117,19 +118,19 @@ sort_pcap = yes
 # Examples, see documentation for more:
 # sqlite:///foo.db
 # postgresql://foo:bar@localhost:5432/mydatabase
-# mysql://foo:bar@localhost/mydatabase
-# If empty, defaults to a SQLite3 database at $CWD/cuckoo.db.
 connection = mysql://cuckoo:Cuck00@n@lyst!@localhost/cuckoo
+# If empty, defaults to a SQLite3 database at $CWD/cuckoo.db.
+#connection = 
 
 # Database connection timeout in seconds.
 # If empty, default is set to 60 seconds.
-timeout = 120
+timeout = 60
 
 [timeouts]
 # Set the default analysis timeout expressed in seconds. This value will be
 # used to define after how many seconds the analysis will terminate unless
 # otherwise specified at submission.
-default = 120
+default = 60
 
 # Set the critical timeout expressed in (relative!) seconds. It will be added
 # to the default timeout above and after this timeout is hit
