--- a/cuckoo/conf/virtualbox.conf
+++ b/cuckoo/conf/virtualbox.conf
@@ -2,7 +2,7 @@
 # Specify which VirtualBox mode you want to run your machines on.
 # Can be "gui" or "headless". Please refer to VirtualBox's official
 # documentation to understand the differences.
-mode = gui
+mode = headless
 
 # Path to the local installation of the VBoxManage utility.
 path = /usr/bin/VBoxManage
@@ -15,8 +15,7 @@ interface = vboxnet0
 # Specify a comma-separated list of available machines to be used. For each
 # specified ID you have to define a dedicated section containing the details
 # on the respective machine. (E.g. cuckoo1,cuckoo2,cuckoo3)
-machines = cuckoo1
-
+machines = cuckoo1,cuckoo2,cuckoo3,cuckoo4,cuckoo5,cuckoo6,cuckoo7,cuckoo8
 
 [cuckoo1]
 # Specify the label name of the current machine as specified in your
@@ -72,8 +71,48 @@ options =
 # memory.conf which solves the problem of having multiple types of VMs
 # and properly determining which profile to use.
 osprofile = 
+[cuckoo2]
+label = cuckoo2
+platform = windows
+ip = 192.168.56.3
 
+[cuckoo3]
+label = cuckoo3
+platform = windows
+ip = 192.168.56.4
 
+[cuckoo4]
+label = cuckoo4
+platform = windows
+ip = 192.168.56.5
+[cuckoo5]
+label = cuckoo5
+platform = windows
+ip = 192.168.56.6
+[cuckoo6]
+label = cuckoo6
+platform = windows
+ip = 192.168.56.7
+[cuckoo7]
+label = cuckoo7
+platform = windows
+ip = 192.168.56.8
+[cuckoo8]
+label = cuckoo8
+platform = windows
+ip = 192.168.56.9
+#[cuckoo9]
+#label = cuckoo9
+#platform = windows
+#ip = 192.168.56.10
+#[cuckoo10]
+#label = cuckoo10
+#platform = windows
+#ip = 192.168.56.11
+#[cuckoo11]
+#label = cuckoo11
+#platform = windows
+#ip = 192.168.56.12
 [honeyd]
 # For more information on this VM please refer to the "services" section of
 # the conf/auxiliary.conf configuration file. This machine is a bit special
