modify reporting.conf 엘라스틱서치와의 연동 설정 변경

--- a/cuckoo/conf/reporting.conf
+++ b/cuckoo/conf/reporting.conf
@@ -38,12 +38,12 @@ port = 27017
 db = cuckoo
 store_memdump = yes
 paginate = 100
-# MongoDB authentication (optional).
+# MongoDB authentication (enter password).
 username = cuckoo
-password = seclab4680!@#
+password =
 
 [elasticsearch]
-enabled = no
+enabled = yes
 # Comma-separated list of ElasticSearch hosts. Format is IP:PORT, if port is
 # missing the default port is used.
 # Example: hosts = 127.0.0.1:9200, 192.168.1.1:80
@@ -53,7 +53,7 @@ hosts = 203.246.112.137:9200
 timeout = 300
 # Set to yes if we want to be able to search every API call instead of just
 # through the behavioral summary.
-calls = no
+calls = yes
 # Index of this Cuckoo instance. If multiple Cuckoo instances connect to the
 # same ElasticSearch host then this index (in Moloch called "instance") should
 # be unique for each Cuckoo instance.
