몽고db acs 검색 코드 추가 & 웹 acs 피쳐해싱 코드 완성

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 ## Ignore File ##
 .idea/*
+__pycache__/
+
 web/web_sqlite3
 web/db.sqlite3
 web/media/*
 web/upload_app/migrations/
-__pycache__/
+
 normal_json/
 sample_report/
+
+fh_acs/
