웹 동적 모델 테스트 수정 & 설정 파일 리펙토링

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ## Ignore File ##
-.idea/*
+.idea/
 __pycache__/
 
 web/web_sqlite3
@@ -11,3 +11,8 @@ normal_json/
 sample_report/
 
 fh_acs/
+
+tensorflow_model/static_bc_model.ckpt*
+tensorflow_model/static_mc_model.ckpt*
+tensorflow_model/dynamic_bc_model.ckpt*
+tensorflow_model/dynamic_mc_model.ckpt*
