--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ idb/
 
 tensorflow_model/static_bc_model.ckpt*
 tensorflow_model/static_mc_model.ckpt*
+tensorflow_model/dynamic_model.ckpt*
 tensorflow_model/dynamic_bc_model.ckpt*
 tensorflow_model/dynamic_mc_model.ckpt*
